--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
     "@types/node": "^16.18.14",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "axios": "^1.3.4",
+    "chart.js": "^2.9.4",
     "react": "^18.2.0",
+    "react-chartjs-2": "^2.11.2",
+    "react-currency-input-field": "^3.6.10",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
@@ -41,6 +46,8 @@
     ]
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.6.0",
+    "@types/chart.js": "^2.9.37",
     "sass": "^1.59.2"
   }
 }
