--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -12,12 +13,17 @@
     "@types/react-dom": "^18.0.11",
     "axios": "^1.3.4",
     "chart.js": "^2.9.4",
+    "chartjs-plugin-zoom": "^2.0.0",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-chartjs-2": "^2.11.2",
     "react-currency-input-field": "^3.6.10",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
